<resources>
    <string name="app_name">MyGithubRev2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="settings">Setting</string>
    <string name="my_favorite_users">Favorites</string>
    <string name="could_not_find_any_user_matching">Could not find any user matching</string>
    <string name="bio">Bio</string>
    <string name="followers">Followers</string>
    <string name="following">Followings</string>
    <string name="example">Example</string>
    <string name="repositories">Repositories</string>
    <string name="this_user_has_no_followers">This user doestn\'t have followers</string>
    <string name="add_user_to_favorite_list">Add User To Favorite List</string>
    <string name="button_favorite">Button favorite</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_setting">Setting</string>
    <string name="setting">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="tutorial">Tutorial</string>
    <string name="to_delete_favorite_users_swipe_right_or_left">To delete favorite users swipe list to right or left</string>
    <string name="cannot_connect_to_internet">Cannot connect to internet</string>
    <string name="image_user">Image User</string>
</resources>