<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_searchFragment_to_favoriteFragment"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/my_favorite_users"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_searchFragment_to_settingsFragment"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />

</menu>